src/features/user_profile/components/LoginForm/LoginForm.module.css
.modalContainer {
  z-index: var(--modal);
}
.modalCard {
  box-shadow: none !important;
}

.loginDescription {
  margin-top: 20px;
}

.inputsContainer {
  margin-top: var(--double-unit);
  display: flex;
  flex-direction: column;
  gap: 20px;
}

.authInput:-webkit-autofill {
  -webkit-background-clip: text;
}

.link {
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 18px;
  color: var(--accent-strong);
  cursor: pointer;

  & a {
    text-decoration: none;
    color: var(--accent-strong);
  }
  & a:hover {
    text-decoration: underline;
  }
}

.forgotPasswordContainer {
  margin-top: var(--unit);
}

.registerContainter {
  margin: var(--double-unit) auto 0 auto;
}

.loginButtonContainer {
  margin-top: var(--double-unit);
}

.loginButton {
  width: 100%;
}

.divider {
  margin-top: var(--double-unit);
  font-family: 'IBM Plex Sans', sans-serif;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.019px;
  color: var(--base-strong);
}

.googleButtonContainer {
  margin-top: var(--unit);
}

.loadingContainer {
  position: absolute;
  background: rgba(255, 255, 255, 0.7);
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  z-index: 1;
  display: flex;
  justify-content: center;
  align-items: center;
}

.errorMessageContainer {
  margin-top: 16px;
  font-style: normal;
  font-weight: normal;
  font-size: 16px;
  line-height: 22px;
  display: flex;
  justify-content: center;
  color: var(--error-strong);
}

